# STM32L0xx_HAL_ST

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmsis/device/: stm32l0xx.h
conf/: stm32l0xx_hal_conf.h
